# lolol

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: pull_request_template.md
src/: devicemanager.cpp  devicemanager.hpp  frame.cpp  frame.hpp  main.cpp  videodevice.cpp  videodevice.hpp
src/utils/: framelimiter.cpp  framelimiter.hpp
tests/: CMakeLists.txt  test_frame.cpp  test_framelimiter.cpp
